--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "pdfkit": "^0.14.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.2",
-    "react-dom": "^18.2.0"
+    "mongoose": "^8.1.0",
+    "pdfkit": "^0.14.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
     "cross-env": "^7.0.3",
