--- a/motel-booking-frontend/package.json
+++ b/motel-booking-frontend/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.2",
