--- a/motel-booking-frontend/package.json
+++ b/motel-booking-frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "jwt-decode": "^4.0.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^5.0.0",
