--- a/motel-booking-frontend/package.json
+++ b/motel-booking-frontend/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
